# cahiers

./: .gitignore  README.md
ai/: .gitignore  local-embeddings.ipynb  low-buyin.ipynb  pyproject.toml  try-marvin.ipynb
attic/: .gitignore
comp/: dpv0.jl  dpv1.1.jl  dpv1.jl
data/: chicago.txt  pericles.txt
dpv/: README.md  dpv0.jl  dpv1.jl
euler/: .gitignore  README.md
math/: dice.ipynb
modernai/: hw0.ipynb
text/: redline.py
